--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <main>
         <section class="main-info">
            <div class="container">
+            <h2 class="main-info-title visually-hidden">List info</h2>
+           
             <ul class="main-info-list">
                 <li class="main-info-list-li">
                     <a class="main-info-list-href" href="#" lang="en">CRYPTO</a>
@@ -59,6 +61,7 @@
 
         <section class="main-inform-about">
             <div class="container">
+                <div class="main-inform-title-back"></div>
             <h2 class="main-inform-title visually-hidden">300+ УЧАСНИКІВ<br/> 8 СПІКЕРІВ</h2>
             <p class="main-inform-text"><span class="main-inform-text-span" lang="en">CRYPTO DVIZH</span> приєднуйтесь до наймасштабнішої      криптоподії року, що збере найкращих професіоналів галузі та найамбіційніших ентузіастів криптосвіту!</p>
             <p class="main-inform-text-chapter">Що вас чекає:</p>
@@ -83,32 +86,32 @@
                 <h3 class="speakers-list-title">Богдан Тимощук</h3>
                 </li>
                 <li class="speakers-list-li">
-                    <img class="speakers-list-img" src="" alt="">
+                    <img class="speakers-list-img" src="#" alt="">
+                <h3 class="speakers-list-title">Ростислав Смірнов</h3>
+                </li>
+                <li class="speakers-list-li">
+                    <img class="speakers-list-img" src="#" alt="">
                 <h3 class="speakers-list-title">Богдан Тимощук</h3>
                 </li>
                 <li class="speakers-list-li">
-                    <img class="speakers-list-img" src="" alt="">
+                    <img class="speakers-list-img" src="#" alt="">
+                <h3 class="speakers-list-title">Ростислав Смірнов</h3>
+                </li>
+                <li class="speakers-list-li">
+                    <img class="speakers-list-img" src="#" alt="">
                 <h3 class="speakers-list-title">Богдан Тимощук</h3>
                 </li>
                 <li class="speakers-list-li">
-                    <img class="speakers-list-img" src="" alt="">
+                    <img class="speakers-list-img" src="#" alt="">
+                <h3 class="speakers-list-title">Ростислав Смірнов</h3>
+                </li>
+                <li class="speakers-list-li">
+                    <img class="speakers-list-img" src="#" alt="">
                 <h3 class="speakers-list-title">Богдан Тимощук</h3>
                 </li>
                 <li class="speakers-list-li">
-                    <img class="speakers-list-img" src="" alt="">
-                <h3 class="speakers-list-title">Богдан Тимощук</h3>
-                </li>
-                <li class="speakers-list-li">
-                    <img class="speakers-list-img" src="" alt="">
-                <h3 class="speakers-list-title">Богдан Тимощук</h3>
-                </li>
-                <li class="speakers-list-li">
-                    <img class="speakers-list-img" src="" alt="">
-                <h3 class="speakers-list-title">Богдан Тимощук</h3>
-                </li>
-                <li class="speakers-list-li">
-                    <img class="speakers-list-img" src="" alt="">
-                <h3 class="speakers-list-title">Богдан Тимощук</h3>
+                    <img class="speakers-list-img" src="#" alt="">
+                <h3 class="speakers-list-title">Ростислав Смірнов</h3>
                 </li>
             </ul>
             </div>
