--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="main">
         <section class="main-info">
            <div class="container">
             <h2 class="main-info-title visually-hidden">List info</h2>
